# funding-metadata-enrichment

./: .gitignore  README.md
extract-funding-from-full-text/: .gitignore  README.md  benchmark_qwen3-8b-entities-thinking_test.json  benchmark_qwen3-8b-entities-thinking_train.json  config_loader.py  document_loader.py  extraction.py  funding_extractor.py  markdown_healer.py  models.py  normalization.py  providers.py  pyproject.toml  requirements.txt  structured_extraction.py  utils.py
extract-funding-from-full-text/benchmark_results/qwen3-8b/: qwen3-8b_benchmark_train.json
extract-funding-from-full-text/benchmark_results/qwen3.5-397b/: qwen3.5-397b_benchmark_train.json  qwen3.5-397b_predictions_train.json
extract-funding-from-full-text/configs/patterns/: funding_patterns.yaml
extract-funding-from-full-text/configs/prompts/: extraction_prompt.txt
extract-funding-from-full-text/configs/queries/: default.yaml
extract-funding-from-full-text/docs/perf/: 2026-04-24-cli-resume-smoke.md  2026-04-24-h200-ab-pipelined.md  baseline-throughput-findings.md  tier2-throughput-tuning.md
extract-funding-from-full-text/docs/plans/: 2026-04-24-arxiv-funding-extraction-orchestration-design.md  2026-04-24-arxiv-funding-extraction-orchestration.md
extract-funding-from-full-text/docs/plans/notes/: input-schema-2026-04-24.txt  throughput-a100-tier2.txt
extract-funding-from-full-text/funding_extractor/: __init__.py  __main__.py  exceptions.py  models.py
extract-funding-from-full-text/funding_extractor/benchmark/: __init__.py  __main__.py  cli.py  dataset.py  evaluator.py  matching.py  metrics.py  report.py
extract-funding-from-full-text/funding_extractor/cli/: __init__.py  main.py
extract-funding-from-full-text/funding_extractor/config/: __init__.py  loader.py  settings.py
extract-funding-from-full-text/funding_extractor/configs/prompts/: cometadata-funding-parsing-lora-Llama_3.1_8B_Instruct-ep2-r16-a32-sft_prompt.txt  extraction_examples.json
extract-funding-from-full-text/funding_extractor/configs/vllm/: default.yaml  llama-3.1-8b-lora.yaml  llama-3.1-8b.yaml  qwen3-8b-lora-thinking.yaml  qwen3-8b-lora.yaml  qwen3-8b-thinking.yaml  qwen3-8b.yaml  qwen3.5-9b.yaml  (+3 more)
extract-funding-from-full-text/funding_extractor/core/: __init__.py  extraction.py  models.py  post_filter.py  structured_extraction.py
extract-funding-from-full-text/funding_extractor/entities/: cli.py  extraction.py  io.py  models.py
extract-funding-from-full-text/funding_extractor/io/: checkpointing.py  loaders.py
extract-funding-from-full-text/funding_extractor/processing/: __init__.py  markdown_healer.py  normalization.py
extract-funding-from-full-text/funding_extractor/providers/: __init__.py  base.py  factory.py  gemini.py  ollama.py  openai.py  vllm.py  vllm_config.py
extract-funding-from-full-text/funding_extractor/statements/: cli.py  extraction.py  io.py  models.py  post_filter.py
extract-funding-from-full-text/funding_statement_extractor/: exceptions.py
extract-funding-from-full-text/funding_statement_extractor/cli/: main.py
extract-funding-from-full-text/funding_statement_extractor/config/: loader.py  settings.py
extract-funding-from-full-text/funding_statement_extractor/io/: checkpointing.py  loaders.py
extract-funding-from-full-text/funding_statement_extractor/statements/: batch_extraction.py  cli.py  extraction.py  io.py  models.py  post_filter.py
extract-funding-from-full-text/manifests/: README.md
extract-funding-from-full-text/reports/: profile_cpu_fp32_3.json  profile_h200_bf16_50.json  profile_h200_bf16_50_tier1.json  profile_h200_bf16_50_tier2.json  profile_h200_bf16_compile_50.json  profile_h200_cpu_fallback.json  profile_mps_bf16_50.json
extract-funding-from-full-text/rust/funding-prefilter/: Cargo.toml
extract-funding-from-full-text/scripts/: benchmark_hf_job.py  build_funded_only_split.py  diff_predictions.py  extract_funding_job.py  orchestrate_extractions.py  profile_extraction.py  profile_on_h200.py
extract-funding-from-full-text/tests/: test_batch_extraction.py  test_benchmark_dataset.py  test_benchmark_evaluator.py  test_benchmark_matching.py  test_benchmark_metrics.py  test_cli_dispatcher.py  test_entities_cli.py  test_entities_io.py  test_extraction_parsing.py  test_input_sources.py  test_markdown_healer.py  test_models.py  test_output_cleaning.py  test_statements_cli.py  test_statements_io.py  test_statements_only.py  test_vllm_config.py  test_vllm_provider.py
extract-funding-from-full-text/tests/scripts/: conftest.py  test_extract_funding_job.py  test_orchestrate_extractions.py
extract_structured_funding/: pyproject.toml
extract_structured_funding/tests/: test_core.py  test_model_validation.py
utils/heal_markdown/heal-markdown/: Cargo.toml  README.md  build.rs  words.txt
vllm-funding-entity-extraction/: .gitignore  README.md  pyproject.toml
vllm-funding-entity-extraction/benchmark/: benchmark_hf_job.py
vllm-funding-entity-extraction/docs/perf/: 2026-04-25-first-run-throughput.md
vllm-funding-entity-extraction/src/funding_entity_extractor/: __init__.py  cli.py  extract.py  models.py  parquet_io.py  prompt.py  run_driver.py  schema.py  serve.py
vllm-funding-entity-extraction/tests/: test_cli.py  test_extract_concurrent.py  test_extract_single.py  test_integration.py  test_models.py  test_parquet_reader.py  test_parquet_writer.py  test_prompt.py  test_public_api.py  test_run_driver.py  test_schema.py  test_serve.py
vllm-funding-entity-extraction/tests/fixtures/: make_sample_parquet.py
vllm-funding-extraction/: pyproject.toml  qwen3-8b-lora.yaml
vllm-funding-extraction/funding_extraction/: __init__.py  client.py  config.py  extraction.py  models.py  prompts.py  thinking.py
vllm-funding-extraction/funding_extraction/benchmark/: __main__.py  cli.py  evaluator.py  matching.py  metrics.py  report.py
vllm-funding-extraction/jobs/: launch_benchmark.sh  run_benchmark_entities.py  run_benchmark_metrics.py
vllm-funding-extraction/tests/: test_client.py  test_config.py  test_extraction.py  test_models.py  test_prompts.py  test_thinking.py
(+233 files in other folders)
