[build-system]
requires = ["setuptools>=82.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "extract-funding-from-full-text"
version = "0.1.0"
description = "Extract funding information from markdown documents using semantic search and LLM-based entity extraction"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langextract>=1.1.0",
    "openai>=2.20.0",
    "pyarrow>=23.0.0",
    "pydantic>=2.12.0",
    "python-dotenv>=1.2.0",
    "pyyaml>=6.0.2",
    "requests>=2.32.0",
    "datasets>=4.5.0",
    "ftfy>=6.3.0",
    "rapidfuzz>=3.14.0",
]

[project.optional-dependencies]
search = ["pylate>=1.3.0", "torch>=2.0.0"]
test = ["pytest>=9.0.0"]
vllm = ["vllm>=0.15.0"]

[project.scripts]
extract-funding = "funding_extractor.cli.main:main"
benchmark-funding = "funding_extractor.benchmark.cli:main"

[tool.setuptools.packages.find]
include = ["funding_extractor*"]

[tool.setuptools.package-data]
funding_extractor = [
    "configs/queries/*.yaml",
    "configs/patterns/*.yaml",
    "configs/prompts/*.txt",
    "configs/prompts/*.json",
    "configs/vllm/*.yaml",
]
