[build-system]
requires = ["setuptools>=82.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "extract-funding-statements-from-full-text"
version = "0.1.0"
description = "Extract funding statements from markdown documents using semantic search"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyarrow>=23.0.0",
    "pydantic>=2.12.0",
    "python-dotenv>=1.2.0",
    "pyyaml>=6.0.2",
]

[project.optional-dependencies]
search = ["pylate>=1.3.0", "torch>=2.0.0"]
test = ["pytest>=9.0.0"]

[project.scripts]
extract-funding-statements = "funding_statement_extractor.cli.main:main"

[tool.setuptools.packages.find]
include = ["funding_statement_extractor*"]

[tool.setuptools.package-data]
funding_statement_extractor = [
    "configs/queries/*.yaml",
    "configs/patterns/*.yaml",
]
