[project]
name = "extract-funding-statements-from-full-text"
version = "0.1.0"
description = "Extract funding statements from markdown documents using semantic search"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyarrow>=12.0.0",
    "pydantic>=2.0.0",
    "pylate>=0.1.0",
    "pytest>=7.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "torch>=2.0.0",
]

[project.scripts]
extract-funding-statements = "funding_statement_extractor.cli.main:main"

[tool.setuptools.packages.find]
include = ["funding_statement_extractor*"]

[tool.setuptools.package-data]
funding_statement_extractor = [
    "configs/queries/*.yaml",
    "configs/patterns/*.yaml",
]
