[project]
name = "funding-extractor"
version = "1.0.0"
description = "Extract funding information from funding statements"
readme = "README.md"
authors = [
    { name = "Adam", email = "adam.buttrick@ucop.edu" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "openai>=1.50.0",
    "langextract>=1.0.3",
    "requests>=2.32.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
funding-extractor = "funding_extractor.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/funding_extractor"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disable_error_code = ["misc"]

[[tool.mypy.overrides]]
module = [
    "dotenv",
    "click",
    "pydantic",
    "langextract",
    "langextract.*",
    "requests",
]
ignore_missing_imports = true

[dependency-groups]
dev = [
    "types-requests>=2.32.4.20250611",
]
