[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "funding-entity-extractor"
version = "0.1.0"
description = "High-throughput online vLLM utility for extracting structured funder/award metadata from funding statements."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "cometadata" }]
dependencies = [
    "httpx>=0.27",
    "openai>=1.50",
    "pyarrow>=15",
    "tenacity>=8",
    "tqdm>=4.66",
    "pydantic>=2.7",
]

[project.optional-dependencies]
serve = ["vllm>=0.6.5"]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[project.scripts]
funding-extract = "funding_entity_extractor.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/funding_entity_extractor"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
