[build-system]
requires = ["setuptools>=82.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vllm-funding-extraction"
version = "0.1.0"
description = "Extract structured funding entities from text using vLLM"
requires-python = ">=3.12"
dependencies = [
    "openai>=2.20.0",
    "pydantic>=2.12.0",
    "pyyaml>=6.0.2",
    "requests>=2.32.0",
]

[project.optional-dependencies]
benchmark = [
    "datasets>=4.5.0",
    "ftfy>=6.0",
    "huggingface-hub>=0.34.0,<1.0",
    "pyarrow>=23.0.0",
    "rapidfuzz>=3.0",
    "torch>=2.0.0",
]
test = ["pytest>=9.0.0"]

[tool.setuptools.packages.find]
include = ["funding_extraction*"]

[tool.setuptools.package-data]
funding_extraction = [
    "configs/prompts/*.txt",
    "configs/prompts/*.json",
    "configs/vllm/*.yaml",
]
